--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
+    "@testing-library/vue": "^5.9.0",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^29.1.2",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
-    "vue-jest": "^3.0.4",
     "node-sass": "^8.0.0",
     "sass-loader": "^10.4.1",
+    "vue-jest": "^3.0.4",
     "webpack": "^4.46.0"
   }
 }
