--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nuxt --port 3700",
     "build": "nuxt build",
-    "start": "nuxt start --port 3700",
+    "start": "nuxt build && nuxt start --port 3700",
     "generate": "nuxt generate",
     "test": "jest"
   },
