--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "build": "nuxt build",
     "start": "nuxt build && nuxt start --port 3700",
     "generate": "nuxt generate",
-    "test": "jest"
+    "test": "jest --verbose --coverage"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^5.2.3",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
-    "vue": "^2.7.10",
-    "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue": "^2.7.16",
+    "vue-server-renderer": "^2.7.16",
+    "vue-template-compiler": "^2.7.16"
   },
   "devDependencies": {
     "@testing-library/vue": "^5.9.0",
@@ -25,6 +25,7 @@
     "babel-jest": "^29.1.2",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "jest-serializer-vue": "^2.0.2",
     "node-sass": "^8.0.0",
     "sass-loader": "^10.4.1",
     "vue-jest": "^3.0.4",
