--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "nuxt build",
     "start": "nuxt build && nuxt start --port 3700",
     "generate": "nuxt generate",
-    "test": "jest --verbose --coverage"
+    "test": "jest --verbose --coverage",
+    "eslint": "npx eslint . --ignore-pattern 'coverage/lcov-report/**'",
+    "cloc": "node cloc.js"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
@@ -23,6 +25,8 @@
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^29.1.2",
+    "eslint": "^9.9.1",
+    "eslint-plugin-complexity": "^1.0.2",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "jest-serializer-vue": "^2.0.2",
